@@ -1,17 +1,14 @@
 ## Process this file with automake to produce Makefile.in.
 
-supportincludedir = $(pkglibdir)/include
+supportexecincludedir = $(pkglibdir)/include
 
 INCLUDES = -D_GNU_SOURCE
 
 lib_LTLIBRARIES = libgnomesupport.la
 
-supportinclude_HEADERS = popt-gnome.h
-# gnome-argp.h getopt.h long-options.h argp.h error.h
-
 # it is in _DATA since we don't want `gnomesupport.h' to be part of
 # the distributed `.tar.gz' file
-supportinclude_DATA = gnomesupport.h
+supportexecinclude_DATA = gnomesupport.h
 
 # These are internal headers: they are used only when compiling and
 # should not be installed
@@ -29,7 +26,9 @@ libgnomesupport_la_LDFLAGS = -version-info 0:0:0
 
 BUILT_SOURCES = gnomesupport.h
 
-error.c: gnomesupport.h
+# error.o is not always built.  In the case when it is built, make
+# sure gnomesupport.h is built first.
+error.o: gnomesupport.h
 
 gnomesupport.h: gnomesupport.awk $(top_builddir)/config.h
 	$(AWK) -f $(srcdir)/gnomesupport.awk < $(top_builddir)/config.h > gsh-t
